tweak a figure caption

--- a/_posts/2021-01-31-getting-data-from-canada-covid-19-tracker-using-r.Rmd
+++ b/_posts/2021-01-31-getting-data-from-canada-covid-19-tracker-using-r.Rmd
@@ -139,7 +139,7 @@ cases
 
 At the moment the `date` variable is stored as a simple character vector. If we convert that to a `'Date'` object, **ggplot2** 📦 will draw a nicely formatted time axis for us
 
-```{r plot-cases, fig.cap = "", fig.height = 5}
+```{r plot-cases, fig.cap = "Daily Covid-19 Cases in Saskatchewan", fig.height = 5}
 cases %>%
   mutate(date = as.Date(date)) %>%
   ggplot(aes(x = date, y = change_cases)) +
